--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -17,14 +16,18 @@
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-swagger-doc": "^0.4.0",
+    "pg": "^8.11.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-react": "^4.19.0",
     "tailwindcss": "3.3.2",
+    "typeorm": "^0.3.16",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^20.3.0",
     "eslint-plugin-jsdoc": "^45.0.0"
   }
 }
