--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "fitness-gpt/*": ["./src/*"]
     }
   },
   "include": [
