--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,23 +1,20 @@
-# Stage 1: Build the app
-FROM node:18 AS build
+##### DEPENDENCIES
 
-#USER root
-# Set the working directory
+FROM --platform=linux/amd64 node:16-alpine3.17 AS builder
+RUN apk add --no-cache libc6-compat openssl1.1-compat
+RUN yarn global add pnpm
+ARG DATABASE_URL
+ARG NEXT_PUBLIC_CLIENTVAR
+ENV NODE_ENV development
 WORKDIR /app
-#RUN chown -R 1001:1001 /app
-#USER 1001
-
-# Copy package.json and package-lock.json to the working directory
-COPY package*.json ./
-
-# Install dependencies
-RUN npm ci
-
-# Copy the rest of the application code
-COPY . .
-
-# Expose the desired port
 EXPOSE 3000
+ENV PORT 3000
+COPY start-local-dev.sh start-local-dev.sh
+CMD [ "/app/start-local-dev.sh" ]
 
-# Start the app
-CMD ["npm", "run", "dev"]
+
+
+
+
+
+
